Update notebook : add Udacity implementation, add dropna() on dataframe

--- a/plagiarism-detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/plagiarism-detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4  g0pA_taske.txt    e      non"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "9  g0pB_taske.txt    e         1      1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "4  g0pA_taske.txt    e         0      0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "4  dynamic programming is an algorithm design tec...  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "9  dynamic programming is a method for solving ma...     test  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,18 @@
     "    source_count = len(source_ngram)\n",
     "    inter_count = len(intersection(answer_ngram, source_ngram))\n",
     "    containment = inter_count/answer_count\n",
-    "    return containment"
+    "    return containment\n",
+    "\n",
+    "# Alternate implementation proposed by Udacity\n",
+    "def UDACITY_calculate_containment(df, n, answer_filename):\n",
+    "    a_task, a_text = df[ df.File == answer_filename][['Task', 'Text']].values[0]\n",
+    "    s_text = df[(df.Task == a_task) & (df.Class == -1)]['Text'].values[0]\n",
+    "    counts = CountVectorizer(analyzer='word', ngram_range=(n,n))\n",
+    "    ngrams = counts.fit_transform([a_text, s_text])   \n",
+    "    ngram_array = ngrams.toarray()\n",
+    "    intersection = np.min(ngram_array, axis=0).sum()\n",
+    "    answer_ngrams = ngram_array[0].sum() \n",
+    "    return  intersection / answer_ngrams"
    ]
   },
   {
@@ -1075,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,12 +1287,28 @@
     "                lcs_matrix[lin+1][col+1] = max(lcs_matrix[lin][col+1], \n",
     "                                               lcs_matrix[lin+1][col]) # max of top/left values\n",
     "    \n",
-    "    return lcs_matrix[source_len][answer_len]/answer_len\n"
+    "    return lcs_matrix[source_len][answer_len]/answer_len\n",
+    "\n",
+    "# Alternate implementation by UDACITY\n",
+    "def UDACITY_lcs_norm_word(answer_text, source_text):\n",
+    "\n",
+    "    a_words = answer_text.split()\n",
+    "    s_words = source_text.split()\n",
+    "\n",
+    "    matrix = np.zeros((len(s_words)+1, len(a_words)+1))\n",
+    "    for i, s in enumerate(s_words):\n",
+    "        for j, a in enumerate(a_words):\n",
+    "            if a == s:\n",
+    "                matrix[i+1,j+1] = matrix[i,j] + 1\n",
+    "            else:\n",
+    "                matrix[i+1,j+1] = max(matrix[i+1,j], matrix[i,j+1])\n",
+    "\n",
+    "    return matrix[-1, -1] / len(a_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1317,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1823,7 @@
        "9  0.091743  0.064516  0.600823  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1821,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2073,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2093,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2212,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2231,6 +2258,7 @@
     "    dfy = pd.DataFrame(y)\n",
     "    dfx = pd.DataFrame(x)\n",
     "    df = pd.concat([dfy, dfx], axis=1)\n",
+    "    df = df.dropna()\n",
     "    df.to_csv(data_dir + '/' + filename, index=False, header=False)\n",
     "\n",
     "    # nothing is returned, but a print statement indicates that the function has run\n",
@@ -2248,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2285,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2302,9 +2330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path created: plagiarism_data/train.csv\n",
+      "Path created: plagiarism_data/test.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# can change directory, if you want\n",
     "data_dir = 'plagiarism_data'\n",
